# OCR-Screenshot-Renamer

./: README.md  captioner.py  filename_cleaner.py  main.py  pyproject.toml  renamer.py  requirements.txt  utils.py
