[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shotrename"
version = "0.1.0"
description = "Terminal-first screenshot renamer using local open-source vision and OCR backends."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
]

[project.scripts]
shotrename = "main:main"

[tool.setuptools]
py-modules = [
    "main",
    "captioner",
    "filename_cleaner",
    "renamer",
    "utils",
]
